# iteratex

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MODEL_REGISTRY.md  README.md  SETUP.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: classic_ml_quickstart.md
iteratex/: __init__.py
iteratex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
iteratex/dataset/: __init__.py  bundle.py
iteratex/evaluation/: evaluator.py
iteratex/feature_store/: __init__.py  builders.py  interface.py
iteratex/ingestion/: consumer.py
iteratex/model_registry/: __init__.py  metadata.py  utils.py
iteratex/preprocessing/: __init__.py  parser.py
iteratex/serving/: main.py
iteratex/training/: __init__.py  base.py  nlp.py  optuna_utils.py  phishing_trainer.py  regression.py
iteratex/utils/: mlflow_utils.py
models/phishing/: feature_importances.csv  feature_importances.json  metadata.json
scripts/: README.md  build_features.py  generate_test_data.py  parse_raw.py  register_model.py  requirements-dev.txt  retrain.py  scheduler.py  send_test_msgs.py  test_end_to_end.py  test_prediction.py
test_data/: phishing_test_data.csv  phishing_test_data.jsonl
tests/: test_bundle.py  test_evaluator.py  test_optuna.py  test_preprocessing.py  test_registry_atomic.py
