[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iteratex"
version = "0.0.1"
description = "Self-training AI system scaffolding for IteraTex"
authors = [{ name = "IteraTex Team" }]
requires-python = ">=3.9"

# Core runtime dependencies
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "kafka-python>=2.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.5",
    "pydantic>=2.6",
    "loguru>=0.7",
    "prometheus-client>=0.19",
    "apscheduler>=3.10",
    "watchdog>=4.0",
    "joblib>=1.4"
]

[project.optional-dependencies]
# Tooling used only for development / CI
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "ruff>=0.4",
    "pre-commit>=3.6"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
extend-exclude = [".venv", "dist", "build"]
fix = true
lint.select = ["E", "F", "I", "B"]



[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
